# parse_two_sites

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/: cache.py  celery_config.py  config.py  db.py
crud/: __init__.py  base.py  website.py
errors/: __init__.py  base.py  errors.py
integration/: __init__.py  website.py
models/: config.py  mixin.py
models/document/: base.py  website.py
models/document/alembic/: env.py
models/document/alembic/versions/: b7f8dc3cdd53_init_website.py
models/sitemap/: sitemap.py
schemas/: __init__.py  base.py  website.py
services/: ab.py  base.py  deps.py  scrape.py  website.py
tasks/: parse.py  website.py
tests/: test.py  test_redis.py
